# swagger.json
@@ -19,7 +19,11 @@
         "summary": "Logs Customers Into their Acounts",
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/logout": {
@@ -27,7 +31,7 @@
         "tags": [
           "Login, Logout Process"
         ],
-        "summary": "Logs Customers Out of their Acounts",
+        "summary": "Logs Customers or Users Out of their Acounts",
         "description": "",
         "parameters": [],
         "responses": {}
@@ -78,16 +82,7 @@
                 "category": {
                   "example": "any"
                 },
-                "manufacturer": {
-                  "example": "any"
-                },
-                "inStock": {
-                  "example": "any"
-                },
-                "brand": {
-                  "example": "any"
-                },
-                "color": {
+                "availability": {
                   "example": "any"
                 }
               }
@@ -168,16 +163,7 @@
                 "category": {
                   "example": "any"
                 },
-                "manufacturer": {
-                  "example": "any"
-                },
-                "inStock": {
-                  "example": "any"
-                },
-                "brand": {
-                  "example": "any"
-                },
-                "color": {
+                "availability": {
                   "example": "any"
                 }
               }
@@ -422,6 +408,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -440,6 +429,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "password": {
+                  "example": "any"
+                },
                 "name": {
                   "example": "any"
                 },
@@ -457,9 +449,6 @@
                 },
                 "gender": {
                   "example": "any"
-                },
-                "userType": {
-                  "example": "any"
                 }
               }
             }
@@ -468,9 +457,6 @@
         "responses": {
           "201": {
             "description": "Created"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "412": {
             "description": "Precondition Failed"
@@ -506,6 +492,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -530,6 +519,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "password": {
+                  "example": "any"
+                },
                 "name": {
                   "example": "any"
                 },
@@ -600,6 +592,46 @@
         }
       }
     },
+    "/users/login": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Login in a new user",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/customers/": {
       "get": {
         "tags": [
@@ -614,6 +646,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -650,6 +685,9 @@
           "201": {
             "description": "Created"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -683,6 +721,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -722,6 +763,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -751,6 +795,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -760,7 +807,7 @@
     "/my-account/": {
       "get": {
         "tags": [
-          "My Account"
+          "My Account, Customers"
         ],
         "summary": "Gets Account of Currently Logged User",
         "description": "",
@@ -782,7 +829,7 @@
       },
       "put": {
         "tags": [
-          "My Account"
+          "My Account, Customers"
         ],
         "summary": "Updates Account of Currently Logged User",
         "description": "",
@@ -820,7 +867,7 @@
       },
       "delete": {
         "tags": [
-          "My Account"
+          "My Account, Customers"
         ],
         "summary": "Deletes Account of Currently Logged User",
         "description": "",
